[gd_scene load_steps=3 format=2]

[ext_resource path="res://fonts/default_theme.tres" type="Theme" id=1]
[ext_resource path="res://subscenes/tournament/seeded_player_display.gd" type="Script" id=2]

[node name="SeedPlayerDisplay" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
script = ExtResource( 2 )

[node name="Action" type="MenuButton" parent="."]
margin_right = 39.0
margin_bottom = 1080.0
theme = ExtResource( 1 )
text = "..."
flat = false
items = [ "Up", null, 0, false, false, 0, 0, null, "", false, "Down", null, 0, false, false, 1, 0, null, "", false, "Del", null, 0, false, false, 2, 0, null, "", false ]

[node name="NameRace" type="Label" parent="."]
margin_left = 43.0
margin_right = 1798.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )

[node name="VirtualPoints" type="LineEdit" parent="."]
margin_left = 1802.0
margin_right = 1920.0
margin_bottom = 1080.0
theme = ExtResource( 1 )
max_length = 2
placeholder_text = "V.P."

[connection signal="text_changed" from="VirtualPoints" to="." method="_on_VirtualPoints_text_changed"]
